--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ghém Vietnamese Cuisine</title>
+    <meta name="p:domain_verify" content="27567a916f1314f38dcc0e6d1b1ce41b"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
